[package]
name = "bimultimap"
version = "0.0.2"
edition = "2024"
authors = ["tkr-sh"]
license = "LGPL-3.0-or-later"
description = "A Bidirectional multi map"
repository = "https://github.com/tkr-sh/bimultimap"
readme = "README.md"
exclude = ["LICENSE.md"]


[features]
default = ["hashbrown"]
hashbrown = ["dep:hashbrown"]
hashmap = []
btreemap = []
thread-safe = []

[dependencies]
hashbrown = { optional = true, version = "0.15" }
