[package]
name = "bimultimap"
version = "0.0.3"
edition = "2024"
authors = ["tkr-sh"]
license = "LGPL-3.0-or-later"
description = "A Bidirectional multi map"
repository = "https://github.com/tkr-sh/bimultimap"
readme = "README.md"
exclude = ["LICENSE.md"]


[features]
default = ["hashmap"]

hashbrown = ["dep:hashbrown"]
hashmap = []
btreemap = []

thread-safe = []

serde = ["dep:serde"]

mlua = ["dep:mlua"]


[dependencies]
hashbrown = { optional = true, version = "0.15" }
serde = { optional = true, version = "1.0" }
mlua = { optional = true, version = "0.10", features = ["lua54"]}

[dev-dependencies]
serde_json = "1.0"
